// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkbox > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
    >
      <div
        class="styles__1u4n71t1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
        data-active="false"
        data-disabled="false"
        data-prominence="default"
        data-size="medium"
        data-trailing-icon="false"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly active 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
    >
      <div
        class="styles__1u4n71t1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
        data-active="true"
        data-disabled="false"
        data-prominence="stronger"
        data-size="medium"
        data-trailing-icon="true"
      >
        test 
        <div
          class="styles__1u4n71t0"
          data-active="true"
          data-disabled="false"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="m7.503 14.83.004.003.002.002c.286.22.695.22.982 0l.002-.002.004-.003.013-.01.03-.023.014-.012.16-.13a17 17 0 0 0 2.203-2.243c1.187-1.466 2.468-3.598 2.468-6.027a5.385 5.385 0 0 0-10.77 0c0 2.43 1.28 4.561 2.468 6.028a17 17 0 0 0 2.204 2.243l.158.13.045.034zM8 8a1.616 1.616 0 1 0 0-3.23A1.616 1.616 0 0 0 8 8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly active disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
    >
      <div
        class="styles__1u4n71t1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
        data-active="true"
        data-disabled="true"
        data-prominence="stronger"
        data-size="medium"
        data-trailing-icon="true"
      >
        test 
        <div
          class="styles__1u4n71t0"
          data-active="true"
          data-disabled="true"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="m7.503 14.83.004.003.002.002c.286.22.695.22.982 0l.002-.002.004-.003.013-.01.03-.023.014-.012.16-.13a17 17 0 0 0 2.203-2.243c1.187-1.466 2.468-3.598 2.468-6.027a5.385 5.385 0 0 0-10.77 0c0 2.43 1.28 4.561 2.468 6.028a17 17 0 0 0 2.204 2.243l.158.13.045.034zM8 8a1.616 1.616 0 1 0 0-3.23A1.616 1.616 0 0 0 8 8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
    >
      <div
        class="styles__1u4n71t1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
        data-active="false"
        data-disabled="true"
        data-prominence="weak"
        data-size="medium"
        data-trailing-icon="true"
      >
        test 
        <div
          class="styles__1u4n71t0"
          data-active="false"
          data-disabled="true"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="m7.503 14.83.004.003.002.002c.286.22.695.22.982 0l.002-.002.004-.003.013-.01.03-.023.014-.012.16-.13a17 17 0 0 0 2.203-2.243c1.187-1.466 2.468-3.598 2.468-6.027a5.385 5.385 0 0 0-10.77 0c0 2.43 1.28 4.561 2.468 6.028a17 17 0 0 0 2.204 2.243l.158.13.045.034zM8 8a1.616 1.616 0 1 0 0-3.23A1.616 1.616 0 0 0 8 8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
    >
      <div
        class="styles__1u4n71t1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
        data-active="false"
        data-disabled="false"
        data-prominence="default"
        data-size="large"
        data-trailing-icon="true"
      >
        test 
        <div
          class="styles__1u4n71t0"
          data-active="false"
          data-disabled="false"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="m7.503 14.83.004.003.002.002c.286.22.695.22.982 0l.002-.002.004-.003.013-.01.03-.023.014-.012.16-.13a17 17 0 0 0 2.203-2.243c1.187-1.466 2.468-3.598 2.468-6.027a5.385 5.385 0 0 0-10.77 0c0 2.43 1.28 4.561 2.468 6.028a17 17 0 0 0 2.204 2.243l.158.13.045.034zM8 8a1.616 1.616 0 1 0 0-3.23A1.616 1.616 0 0 0 8 8"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkbox > renders correctly wiht icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
    >
      <div
        class="styles__1u4n71t1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
        data-active="false"
        data-disabled="false"
        data-prominence="default"
        data-size="medium"
        data-trailing-icon="false"
      >
        <button
          class="styles__1u4n71t0"
          data-active="false"
          data-disabled="false"
          data-has-onclick="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="m7.503 14.83.004.003.002.002c.286.22.695.22.982 0l.002-.002.004-.003.013-.01.03-.023.014-.012.16-.13a17 17 0 0 0 2.203-2.243c1.187-1.466 2.468-3.598 2.468-6.027a5.385 5.385 0 0 0-10.77 0c0 2.43 1.28 4.561 2.468 6.028a17 17 0 0 0 2.204 2.243l.158.13.045.034zM8 8a1.616 1.616 0 1 0 0-3.23A1.616 1.616 0 0 0 8 8"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;
